# zsibot_roamer-x_lite

./: README.md  build.sh  format.sh
src/description/src/xg_description/: CMakeLists.txt  package.xml
src/description/src/xg_description/launch/: display.launch.py
src/description/src/xg_description/meshes/: LB_calf_link.STL  LB_foot_link.STL  LF_foot_link.STL  RB_calf_link.STL  RB_foot_link.STL  RF_calf_link.STL  RF_foot_link.STL  camera.STL  imu.STL  radar.STL  radar.stl
src/description/src/xg_description/rviz/: xg_config.rviz
src/description/src/xg_description/urdf/: xg.urdf  xg_description.gv  xg_description.urdf
src/description/src/xg_description/xacro/: camera.xacro  const.xacro  gazebo.xacro  leg.xacro  livox_mid360.xacro  materials.xacro  my_xg_robot.urdf  radar.xacro  robot.xacro
src/description/src/zsl1_description/: CMakeLists.txt  package.xml
src/description/src/zsl1_description/meshes/: BASE_LINK.STL
src/description/src/zsl1_description/urdf/: ZSL-1.csv  ZSL-1.urdf  ZSL-1_fixed.urdf
src/forward/ecal2ros/: CMakeLists.txt  package.xml
src/forward/ecal2ros/src/: ecal2ros.cpp
src/forward/jszr_tf/: CMakeLists.txt  package.xml
src/forward/jszr_tf/config/: config.yaml
src/forward/jszr_tf/include/: base_tf.h  common.h  gazebo_tf.h  highlevel_connector.h  localization_tf.h  mc_tf.h  mujoco_tf.h  types.h  udp_components.h
src/forward/jszr_tf/launch/: pub_tf.launch.py
src/forward/jszr_tf/src/: base_tf.cpp  gazebo_tf.cpp  highlevel_connector.cpp  localization_tf.cpp  mc_tf.cpp  mujoco_tf.cpp  tf_manager.cpp
src/interface/robots_dog_msgs/: CMakeLists.txt  package.xml
src/interface/robots_dog_msgs/action/: BackUp.action  ComputePathThroughPoses.action  ComputePathToPose.action  ComputePathsToPoses.action  ExploreThroughPoses.action  FollowPath.action  FollowWaypoints.action  NavigateThroughPoses.action  NavigateToPose.action  ProcessInfo.action
src/interface/robots_dog_msgs/config/: version.yaml.in
src/interface/robots_dog_msgs/msg/: CmdVelWithTrajectory.msg  CpuInfo.msg  DiskInfo.msg  ElectronicMap.msg  ElectronicObstacle.msg  FaultInfo.msg  FaultInfoMultiArray.msg  Frontier.msg  HighLevelRobotState.msg  LegControlData.msg  LinktrackAoaNode0.msg  Localization.msg  MonitorInfo.msg  NavigationError.msg  NavigationErrorReport.msg  NavigationErrorSet.msg  NavigationState.msg  NetInfo.msg  Nmea.msg  ObstacleInstance2D.msg  ObstacleScan.msg  PlannerDebugInfo.msg  PredictedPath.msg  PredictedPathArray.msg  PredictedPose.msg  ProcessInfo.msg  RectangleArray.msg  RectangleWithCentre.msg  Relocalization.msg  SlamState.msg  StartNavigation.msg  TrajectoryPoint.msg  UniBestNav.msg  UniHeading.msg  UwbPointStamped.msg
src/interface/robots_dog_msgs/srv/: GetFrontierCentroids.srv  GetOptimizedPath.srv  IsExplorationGoalValid.srv  IsExplorationGoalsValid.srv  IsPathValid.srv  IsTargetInFov.srv  LoadMap.srv  LocalizationState.srv  MapState.srv  MappingType.srv  RecordKeyPose.srv  RecordPath.srv  UseMapType.srv
src/localization/localization/: CMakeLists.txt  package.xml
src/localization/localization/apps/: localization_nodelet.cpp
src/localization/localization/config/: config.yaml
src/localization/localization/include/localization/: delta_estimater.hpp  global_localization.hpp  mode_state.h  odom_system.hpp  pose_estimator.hpp  pose_system.hpp  static_imu_init.hpp
src/localization/localization/launch/: localization.launch.py
src/localization/localization/src/localization/: global_localization.cpp  pose_estimator.cpp  static_imu_init.cpp
src/navigation/src/navigo_util/: CMakeLists.txt  README.md  package.xml
src/navigation/src/navigo_util/src/: costmap.cpp  lifecycle_bringup_commandline.cpp  lifecycle_node.cpp  lifecycle_service_client.cpp  lifecycle_utils.cpp  node_thread.cpp  node_utils.cpp  odometry_utils.cpp  path_util.cpp  robot_utils.cpp  string_utils.cpp
src/navigation/src/navigo_velocity_optimizer/: CMakeLists.txt  README.md  package.xml
src/navigation/src/navigo_velocity_optimizer/src/: main.cpp  velocity_smoother.cpp
src/navigation/src/navigo_waypoint_follower/: CMakeLists.txt  README.md  package.xml  plugins.xml
src/navigation/src/navigo_waypoint_follower/plugins/: input_at_waypoint.cpp  photo_at_waypoint.cpp  wait_at_waypoint.cpp
src/navigation/src/navigo_waypoint_follower/src/: main.cpp  waypoint_follower.cpp
src/navigation/src/robot_navigo/: .clang_format  CMakeLists.txt  README.md  package.xml
src/navigation/src/robot_navigo/launch/: bringup_launch.py  navigation_bringup.launch.py  navigation_launch.py
src/navigation/src/robot_navigo/map/: neighborhood_map.pgm  neighborhood_map.txt  neighborhood_map.yaml  ue_old_building_with_stairs.pgm  ue_old_building_with_stairs.txt  ue_old_building_with_stairs.yaml
src/navigation/src/robot_navigo/params/: navigo_params.yaml
src/navigation/src/robot_navigo/rviz/: rviz2_config.rviz
src/navigation/src/robot_navigo/scripts/: emap_publisher.py  get_optimized_path_client.py  pp_fem_get_optimized_path.py
src/navigation/src/robot_navigo/src/: costmap_listener.cpp  custom_odom_baselink.cpp  mode_status_publisher.cpp  mutiple_goal_nav.cpp  obstacle_detector.cpp  obstacle_detector.h  odom_communication_node.cpp  odom_communication_node.h  odom_communication_node_udp.cpp  odom_communication_node_udp.h  static_map_publisher.cpp  tf_publisher.cpp  vel_cmd_lcm_publisher.cpp  vel_cmd_udp_publisher.cpp  vel_with_mc_trajectory_cmd_udp.cpp
src/navigation/src/robot_navigo/udp/: CMakeLists.txt
src/slam/src/: CMakeLists.txt  README.md  package.xml
src/slam/src/config/: config.yaml
src/slam/src/include/: common.h  mapping_alg.h  pcd2grid.h  so3_math.h  use_ikfom.h
src/slam/src/include/common/: const_value.h  custom_type.h  math.h  state_mode.h  types.h
src/slam/src/include/ikd_tree/: ikd_tree.h
src/slam/src/include/process/: imu_process.h  (+1 more)
src/slam/src/launch/: slam.launch.py
src/slam/src/rviz/: mapping.rviz
src/slam/src/script/: run_slam.sh  save_map.sh  start_mapping.sh
src/slam/src/src/: mapping_alg.cpp  pcd2grid.cpp  use_ikfom.cpp
src/slam/src/test/: mapping_demo.cpp
(+432 files in other folders)
