<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
        <name>pub_tf</name>
        <version>0.0.0</version>
        <description>The localization package</description>
        <maintainer email="liliuzhao@jushenzhiren.com">LiuZhao Li</maintainer>
        <license>MPL</license>

        <buildtool_depend>ament_cmake</buildtool_depend>

        <depend>tf2_ros</depend>
        <depend>tf2_geometry_msgs</depend>
        <depend>tf2_eigen</depend>
        <depend>pcl_ros</depend>
        <depend>pcl_conversions</depend>
        <depend>rclcpp</depend>
        <depend>sensor_msgs</depend>
        <depend>geometry_msgs</depend>
        <depend>nav_msgs</depend>
        <depend>robots_dog_msgs</depend>
        <depend>mc_sdk_msg</depend>

        <exec_depend>rosidl_default_runtime</exec_depend>
        <member_of_group>rosidl_interface_packages</member_of_group>

        <export>
                <build_type>ament_cmake</build_type>
        </export>

</package>
