<?xml version="1.0"?>
<package format="3">
  <name>robot_slam</name>
  <version>0.0.0</version>

  <description>
    This is a mapping algorithm.
  </description>

  <maintainer email="deionl@todo.todo">deionl</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>common_interfaces</depend>
  <depend>tf2</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>robots_dog_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
